parser.output
Terminals unused in grammar

   DIGIT


Grammar

    0 $accept: start $end

    1 start: imports program
    2      | program

    3 imports: IMPORT STRINGLIT STMT_SEP
    4        | imports IMPORT STRINGLIT STMT_SEP

    5 prog_element: declaration STMT_SEP
    6             | function_definition

    7 program: prog_element program
    8        | prog_element

    9 declaration: TYPE NAME ASSIGN STRINGLIT
   10            | TYPE NAME
   11            | TYPE NAME ASSIGN texp

   12 function_definition: TYPE NAME OPENPAREN parameters CLOSEPAREN statement_block
   13                    | TYPE NAME OPENPAREN CLOSEPAREN statement_block
   14                    | VOIDV NAME OPENPAREN CLOSEPAREN statement_block
   15                    | VOIDV NAME OPENPAREN parameters CLOSEPAREN statement_block

   16 parameters: TYPE NAME
   17           | parameters LIST_SEP TYPE NAME

   18 statement_block: OPENBRACE statement_list CLOSEBRACE

   19 statement_list: statementsc STMT_SEP
   20               | statementcurly
   21               | statement_list statementsc STMT_SEP
   22               | statement_list statementcurly

   23 statementsc: declaration
   24            | assignment_statement
   25            | function_call
   26            | BREAK
   27            | CONTINUE
   28            | RETURN
   29            | RETURN texp

   30 statementcurly: if_block
   31               | while_block
   32               | for_block

   33 assignment_statement: NAME ASSIGN texp
   34                     | NAME multidim ASSIGN texp

   35 multidim: OPENSQUARE texp CLOSESQUARE
   36         | multidim OPENSQUARE texp CLOSESQUARE

   37 function_call: NAME OPENPAREN arguments CLOSEPAREN
   38              | NAME OPENPAREN CLOSEPAREN

   39 arguments: texp
   40          | STRINGLIT
   41          | arguments LIST_SEP texp
   42          | arguments LIST_SEP STRINGLIT

   43 if_block: IF OPENPAREN texp CLOSEPAREN statement_block
   44         | IF OPENPAREN texp CLOSEPAREN statement_block ELSE statement_block

   45 while_block: WHILE OPENPAREN texp CLOSEPAREN statement_block

   46 for_block: FOR OPENPAREN STMT_SEP STMT_SEP CLOSEPAREN statement_block
   47          | FOR OPENPAREN STMT_SEP STMT_SEP statementsc CLOSEPAREN statement_block
   48          | FOR OPENPAREN STMT_SEP texp STMT_SEP CLOSEPAREN statement_block
   49          | FOR OPENPAREN STMT_SEP texp STMT_SEP statementsc CLOSEPAREN statement_block
   50          | FOR OPENPAREN statementsc STMT_SEP STMT_SEP CLOSEPAREN statement_block
   51          | FOR OPENPAREN statementsc STMT_SEP STMT_SEP statementsc CLOSEPAREN statement_block
   52          | FOR OPENPAREN statementsc STMT_SEP texp STMT_SEP CLOSEPAREN statement_block
   53          | FOR OPENPAREN statementsc STMT_SEP texp STMT_SEP statementsc CLOSEPAREN statement_block

   54 texp: or_exp

   55 or_exp: and_exp
   56       | or_exp OR and_exp

   57 and_exp: eq_exp
   58        | and_exp AND eq_exp

   59 eq_exp: rel_exp
   60       | eq_exp EQ rel_exp

   61 rel_exp: add_exp
   62        | rel_exp REL add_exp

   63 add_exp: mul_exp
   64        | add_exp ADD mul_exp

   65 mul_exp: exp
   66        | mul_exp MUL exp

   67 exp: term
   68    | UNARY_OP term
   69    | ADD term

   70 term: NAME
   71     | FLOATV
   72     | INTV
   73     | BOOLLIT
   74     | CHARV
   75     | OPENPAREN texp CLOSEPAREN
   76     | NAME multidim
   77     | function_call


Terminals, with rules where they appear

$end (0) 0
error (256)
DIGIT (258)
IMPORT (259) 3 4
STRINGLIT (260) 3 4 9 40 42
STMT_SEP (261) 3 4 5 19 21 46 47 48 49 50 51 52 53
LIST_SEP (262) 17 41 42
TYPE (263) 9 10 11 12 13 16 17
NAME (264) 9 10 11 12 13 14 15 16 17 33 34 37 38 70 76
ASSIGN (265) 9 11 33 34
FLOATV (266) 71
INTV (267) 72
BOOLLIT (268) 73
CHARV (269) 74
VOIDV (270) 14 15
OPENPAREN (271) 12 13 14 15 37 38 43 44 45 46 47 48 49 50 51 52 53
    75
CLOSEPAREN (272) 12 13 14 15 37 38 43 44 45 46 47 48 49 50 51 52 53
    75
OPENBRACE (273) 18
CLOSEBRACE (274) 18
OPENSQUARE (275) 35 36
CLOSESQUARE (276) 35 36
BREAK (277) 26
CONTINUE (278) 27
RETURN (279) 28 29
IF (280) 43 44
ELSE (281) 44
FOR (282) 46 47 48 49 50 51 52 53
WHILE (283) 45
OR (284) 56
AND (285) 58
EQ (286) 60
REL (287) 62
ADD (288) 64 69
MUL (289) 66
UNARY_OP (290) 68


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
start (37)
    on left: 1 2, on right: 0
imports (38)
    on left: 3 4, on right: 1 4
prog_element (39)
    on left: 5 6, on right: 7 8
program (40)
    on left: 7 8, on right: 1 2 7
declaration (41)
    on left: 9 10 11, on right: 5 23
function_definition (42)
    on left: 12 13 14 15, on right: 6
parameters (43)
    on left: 16 17, on right: 12 15 17
statement_block (44)
    on left: 18, on right: 12 13 14 15 43 44 45 46 47 48 49 50 51 52
    53
statement_list (45)
    on left: 19 20 21 22, on right: 18 21 22
statementsc (46)
    on left: 23 24 25 26 27 28 29, on right: 19 21 47 49 50 51 52 53
statementcurly (47)
    on left: 30 31 32, on right: 20 22
assignment_statement (48)
    on left: 33 34, on right: 24
multidim (49)
    on left: 35 36, on right: 34 36 76
function_call (50)
    on left: 37 38, on right: 25 77
arguments (51)
    on left: 39 40 41 42, on right: 37 41 42
if_block (52)
    on left: 43 44, on right: 30
while_block (53)
    on left: 45, on right: 31
for_block (54)
    on left: 46 47 48 49 50 51 52 53, on right: 32
texp (55)
    on left: 54, on right: 11 29 33 34 35 36 39 41 43 44 45 48 49 52
    53 75
or_exp (56)
    on left: 55 56, on right: 54 56
and_exp (57)
    on left: 57 58, on right: 55 56 58
eq_exp (58)
    on left: 59 60, on right: 57 58 60
rel_exp (59)
    on left: 61 62, on right: 59 60 62
add_exp (60)
    on left: 63 64, on right: 61 62 64
mul_exp (61)
    on left: 65 66, on right: 63 64 66
exp (62)
    on left: 67 68 69, on right: 65 66
term (63)
    on left: 70 71 72 73 74 75 76 77, on right: 67 68 69


State 0

    0 $accept: . start $end

    IMPORT  shift, and go to state 1
    TYPE    shift, and go to state 2
    VOIDV   shift, and go to state 3

    start                go to state 4
    imports              go to state 5
    prog_element         go to state 6
    program              go to state 7
    declaration          go to state 8
    function_definition  go to state 9


State 1

    3 imports: IMPORT . STRINGLIT STMT_SEP

    STRINGLIT  shift, and go to state 10


State 2

    9 declaration: TYPE . NAME ASSIGN STRINGLIT
   10            | TYPE . NAME
   11            | TYPE . NAME ASSIGN texp
   12 function_definition: TYPE . NAME OPENPAREN parameters CLOSEPAREN statement_block
   13                    | TYPE . NAME OPENPAREN CLOSEPAREN statement_block

    NAME  shift, and go to state 11


State 3

   14 function_definition: VOIDV . NAME OPENPAREN CLOSEPAREN statement_block
   15                    | VOIDV . NAME OPENPAREN parameters CLOSEPAREN statement_block

    NAME  shift, and go to state 12


State 4

    0 $accept: start . $end

    $end  shift, and go to state 13


State 5

    1 start: imports . program
    4 imports: imports . IMPORT STRINGLIT STMT_SEP

    IMPORT  shift, and go to state 14
    TYPE    shift, and go to state 2
    VOIDV   shift, and go to state 3

    prog_element         go to state 6
    program              go to state 15
    declaration          go to state 8
    function_definition  go to state 9


State 6

    7 program: prog_element . program
    8        | prog_element .

    TYPE   shift, and go to state 2
    VOIDV  shift, and go to state 3

    $default  reduce using rule 8 (program)

    prog_element         go to state 6
    program              go to state 16
    declaration          go to state 8
    function_definition  go to state 9


State 7

    2 start: program .

    $default  reduce using rule 2 (start)


State 8

    5 prog_element: declaration . STMT_SEP

    STMT_SEP  shift, and go to state 17


State 9

    6 prog_element: function_definition .

    $default  reduce using rule 6 (prog_element)


State 10

    3 imports: IMPORT STRINGLIT . STMT_SEP

    STMT_SEP  shift, and go to state 18


State 11

    9 declaration: TYPE NAME . ASSIGN STRINGLIT
   10            | TYPE NAME .
   11            | TYPE NAME . ASSIGN texp
   12 function_definition: TYPE NAME . OPENPAREN parameters CLOSEPAREN statement_block
   13                    | TYPE NAME . OPENPAREN CLOSEPAREN statement_block

    ASSIGN     shift, and go to state 19
    OPENPAREN  shift, and go to state 20

    $default  reduce using rule 10 (declaration)


State 12

   14 function_definition: VOIDV NAME . OPENPAREN CLOSEPAREN statement_block
   15                    | VOIDV NAME . OPENPAREN parameters CLOSEPAREN statement_block

    OPENPAREN  shift, and go to state 21


State 13

    0 $accept: start $end .

    $default  accept


State 14

    4 imports: imports IMPORT . STRINGLIT STMT_SEP

    STRINGLIT  shift, and go to state 22


State 15

    1 start: imports program .

    $default  reduce using rule 1 (start)


State 16

    7 program: prog_element program .

    $default  reduce using rule 7 (program)


State 17

    5 prog_element: declaration STMT_SEP .

    $default  reduce using rule 5 (prog_element)


State 18

    3 imports: IMPORT STRINGLIT STMT_SEP .

    $default  reduce using rule 3 (imports)


State 19

    9 declaration: TYPE NAME ASSIGN . STRINGLIT
   11            | TYPE NAME ASSIGN . texp

    STRINGLIT  shift, and go to state 23
    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    texp           go to state 33
    or_exp         go to state 34
    and_exp        go to state 35
    eq_exp         go to state 36
    rel_exp        go to state 37
    add_exp        go to state 38
    mul_exp        go to state 39
    exp            go to state 40
    term           go to state 41


State 20

   12 function_definition: TYPE NAME OPENPAREN . parameters CLOSEPAREN statement_block
   13                    | TYPE NAME OPENPAREN . CLOSEPAREN statement_block

    TYPE        shift, and go to state 42
    CLOSEPAREN  shift, and go to state 43

    parameters  go to state 44


State 21

   14 function_definition: VOIDV NAME OPENPAREN . CLOSEPAREN statement_block
   15                    | VOIDV NAME OPENPAREN . parameters CLOSEPAREN statement_block

    TYPE        shift, and go to state 42
    CLOSEPAREN  shift, and go to state 45

    parameters  go to state 46


State 22

    4 imports: imports IMPORT STRINGLIT . STMT_SEP

    STMT_SEP  shift, and go to state 47


State 23

    9 declaration: TYPE NAME ASSIGN STRINGLIT .

    $default  reduce using rule 9 (declaration)


State 24

   37 function_call: NAME . OPENPAREN arguments CLOSEPAREN
   38              | NAME . OPENPAREN CLOSEPAREN
   70 term: NAME .
   76     | NAME . multidim

    OPENPAREN   shift, and go to state 48
    OPENSQUARE  shift, and go to state 49

    $default  reduce using rule 70 (term)

    multidim  go to state 50


State 25

   71 term: FLOATV .

    $default  reduce using rule 71 (term)


State 26

   72 term: INTV .

    $default  reduce using rule 72 (term)


State 27

   73 term: BOOLLIT .

    $default  reduce using rule 73 (term)


State 28

   74 term: CHARV .

    $default  reduce using rule 74 (term)


State 29

   75 term: OPENPAREN . texp CLOSEPAREN

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    texp           go to state 51
    or_exp         go to state 34
    and_exp        go to state 35
    eq_exp         go to state 36
    rel_exp        go to state 37
    add_exp        go to state 38
    mul_exp        go to state 39
    exp            go to state 40
    term           go to state 41


State 30

   69 exp: ADD . term

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29

    function_call  go to state 32
    term           go to state 52


State 31

   68 exp: UNARY_OP . term

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29

    function_call  go to state 32
    term           go to state 53


State 32

   77 term: function_call .

    $default  reduce using rule 77 (term)


State 33

   11 declaration: TYPE NAME ASSIGN texp .

    $default  reduce using rule 11 (declaration)


State 34

   54 texp: or_exp .
   56 or_exp: or_exp . OR and_exp

    OR  shift, and go to state 54

    $default  reduce using rule 54 (texp)


State 35

   55 or_exp: and_exp .
   58 and_exp: and_exp . AND eq_exp

    AND  shift, and go to state 55

    $default  reduce using rule 55 (or_exp)


State 36

   57 and_exp: eq_exp .
   60 eq_exp: eq_exp . EQ rel_exp

    EQ  shift, and go to state 56

    $default  reduce using rule 57 (and_exp)


State 37

   59 eq_exp: rel_exp .
   62 rel_exp: rel_exp . REL add_exp

    REL  shift, and go to state 57

    $default  reduce using rule 59 (eq_exp)


State 38

   61 rel_exp: add_exp .
   64 add_exp: add_exp . ADD mul_exp

    ADD  shift, and go to state 58

    $default  reduce using rule 61 (rel_exp)


State 39

   63 add_exp: mul_exp .
   66 mul_exp: mul_exp . MUL exp

    MUL  shift, and go to state 59

    $default  reduce using rule 63 (add_exp)


State 40

   65 mul_exp: exp .

    $default  reduce using rule 65 (mul_exp)


State 41

   67 exp: term .

    $default  reduce using rule 67 (exp)


State 42

   16 parameters: TYPE . NAME

    NAME  shift, and go to state 60


State 43

   13 function_definition: TYPE NAME OPENPAREN CLOSEPAREN . statement_block

    OPENBRACE  shift, and go to state 61

    statement_block  go to state 62


State 44

   12 function_definition: TYPE NAME OPENPAREN parameters . CLOSEPAREN statement_block
   17 parameters: parameters . LIST_SEP TYPE NAME

    LIST_SEP    shift, and go to state 63
    CLOSEPAREN  shift, and go to state 64


State 45

   14 function_definition: VOIDV NAME OPENPAREN CLOSEPAREN . statement_block

    OPENBRACE  shift, and go to state 61

    statement_block  go to state 65


State 46

   15 function_definition: VOIDV NAME OPENPAREN parameters . CLOSEPAREN statement_block
   17 parameters: parameters . LIST_SEP TYPE NAME

    LIST_SEP    shift, and go to state 63
    CLOSEPAREN  shift, and go to state 66


State 47

    4 imports: imports IMPORT STRINGLIT STMT_SEP .

    $default  reduce using rule 4 (imports)


State 48

   37 function_call: NAME OPENPAREN . arguments CLOSEPAREN
   38              | NAME OPENPAREN . CLOSEPAREN

    STRINGLIT   shift, and go to state 67
    NAME        shift, and go to state 24
    FLOATV      shift, and go to state 25
    INTV        shift, and go to state 26
    BOOLLIT     shift, and go to state 27
    CHARV       shift, and go to state 28
    OPENPAREN   shift, and go to state 29
    CLOSEPAREN  shift, and go to state 68
    ADD         shift, and go to state 30
    UNARY_OP    shift, and go to state 31

    function_call  go to state 32
    arguments      go to state 69
    texp           go to state 70
    or_exp         go to state 34
    and_exp        go to state 35
    eq_exp         go to state 36
    rel_exp        go to state 37
    add_exp        go to state 38
    mul_exp        go to state 39
    exp            go to state 40
    term           go to state 41


State 49

   35 multidim: OPENSQUARE . texp CLOSESQUARE

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    texp           go to state 71
    or_exp         go to state 34
    and_exp        go to state 35
    eq_exp         go to state 36
    rel_exp        go to state 37
    add_exp        go to state 38
    mul_exp        go to state 39
    exp            go to state 40
    term           go to state 41


State 50

   36 multidim: multidim . OPENSQUARE texp CLOSESQUARE
   76 term: NAME multidim .

    OPENSQUARE  shift, and go to state 72

    $default  reduce using rule 76 (term)


State 51

   75 term: OPENPAREN texp . CLOSEPAREN

    CLOSEPAREN  shift, and go to state 73


State 52

   69 exp: ADD term .

    $default  reduce using rule 69 (exp)


State 53

   68 exp: UNARY_OP term .

    $default  reduce using rule 68 (exp)


State 54

   56 or_exp: or_exp OR . and_exp

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    and_exp        go to state 74
    eq_exp         go to state 36
    rel_exp        go to state 37
    add_exp        go to state 38
    mul_exp        go to state 39
    exp            go to state 40
    term           go to state 41


State 55

   58 and_exp: and_exp AND . eq_exp

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    eq_exp         go to state 75
    rel_exp        go to state 37
    add_exp        go to state 38
    mul_exp        go to state 39
    exp            go to state 40
    term           go to state 41


State 56

   60 eq_exp: eq_exp EQ . rel_exp

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    rel_exp        go to state 76
    add_exp        go to state 38
    mul_exp        go to state 39
    exp            go to state 40
    term           go to state 41


State 57

   62 rel_exp: rel_exp REL . add_exp

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    add_exp        go to state 77
    mul_exp        go to state 39
    exp            go to state 40
    term           go to state 41


State 58

   64 add_exp: add_exp ADD . mul_exp

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    mul_exp        go to state 78
    exp            go to state 40
    term           go to state 41


State 59

   66 mul_exp: mul_exp MUL . exp

    NAME       shift, and go to state 24
    FLOATV     shift, and go to state 25
    INTV       shift, and go to state 26
    BOOLLIT    shift, and go to state 27
    CHARV      shift, and go to state 28
    OPENPAREN  shift, and go to state 29
    ADD        shift, and go to state 30
    UNARY_OP   shift, and go to state 31

    function_call  go to state 32
    exp            go to state 79
    term           go to state 41


State 60

   16 parameters: TYPE NAME .

    $default  reduce using rule 16 (parameters)


State 61

   18 statement_block: OPENBRACE . statement_list CLOSEBRACE

    TYPE      shift, and go to state 80
    NAME      shift, and go to state 81
    BREAK     shift, and go to state 82
    CONTINUE  shift, and go to state 83
    RETURN    shift, and go to state 84
    IF        shift, and go to state 85
    FOR       shift, and go to state 86
    WHILE     shift, and go to state 87

    declaration           go to state 88
    statement_list        go to state 89
    statementsc           go to state 90
    statementcurly        go to state 91
    assignment_statement  go to state 92
    function_call         go to state 93
    if_block              go to state 94
    while_block           go to state 95
    for_block             go to state 96


State 62

   13 function_definition: TYPE NAME OPENPAREN CLOSEPAREN statement_block .

    $default  reduce using rule 13 (function_definition)


State 63

   17 parameters: parameters LIST_SEP . TYPE NAME

    TYPE  shift, and go to state 97


State 64

   12 function_definition: TYPE NAME OPENPAREN parameters CLOSEPAREN . statement_block

    OPENBRACE  shift, and go to state 61

    statement_block  go to state 98


State 65

   14 function_definition: VOIDV NAME OPENPAREN CLOSEPAREN statement_block .
